# BrainBot

./: .aidigestignore  .coderabbit.yaml  .coderabbit.yml  .env.example  .env.example.clean  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  .quickbooks_token.json  .ruff.toml  .semgrepignore  AI_CODING_RULES.md  ARCHITECTURE.md  BMAD_PREPARATION_COMPLETE.md  BOT_TEST_REPORT.md  CF_MIGRATION_GUIDE.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEVLOG-enhanced.md  Dockerfile.quickbooks  FUTURE_FEATURES.md  GITHUB_SECRETS_SETUP.md  GRAPH_MEMORY_SETUP.md  HANDOFF_DOC.md  IMPLEMENTATION_SUMMARY_T3.2.2.md  INFRASTRUCTURE_DEPLOYMENT_REPORT.md  KIRO_WORKFLOW.md  LIVE_BOT_TEST_SUITE.md  OPTIMIZATION_SUMMARY.md  Procfile  QA_SMART_RAILS_REPORT.md  QUICKBOOKS_README.md  README.md  README_WEBHOOK_SETUP.md  REALTIME_LOGGING_SETUP.md  RENDER_DEPLOYMENT_HANDOFF.md  REPOSITORY-STRUCTURE.md  botlogs.sh  codebase.md  (+44 more)
.augment/: README.md  workspace.yml
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude.backup-20250812-124836/: settings.json.backup-20250807-180758  settings.json.backup-absolute-20250807-183453  settings.json.backup-absolute-20250807-183947  settings.local.json
.coderabbit/: knowledge.md
.githooks/: post-commit  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  secrets-template.md
.mcp/: config.json
10nz_kb/: about-10netzero 2.md  about-10netzero.md  index.md  persistent-note.md  user-2-different-note---public-info.md  user-2-meeting-notes-from-standup.md
ai_docs/: anthropic_custom_slash_commands_2025-08-02.md
cf/: README.md
config/: .coderabbit.yaml  docker-compose.test.yml
docs/: API_DOCUMENTATION.md  CF_MIGRATION_GUIDE.md  CICD_NODE20_UPDATE.md  COMPLETE_SETUP_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP.md  FRONTEND_NODE_FIX_RESOLUTION.md  FUTURE_IMPROVEMENTS.md  HANDOFF_QA_2025-08-26.md  HANDOFF_UNIFIED_STORAGE.md  LOCAL_VS_PRODUCTION.md  MONITORING_QUICK_REFERENCE.md  PERFORMANCE_IMPLEMENTATION_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  QA_REVIEW_2025-08-26.md  QUICKBOOKS_INTEGRATION_SETUP.md  RAG_DOCUMENTATION_INVENTORY.md  README.md  SELF_HOSTED_RUNNER.md  SMART_RAILS_USER_GUIDE.md  STORAGE_IMPLEMENTATION_PLAN.md  STORAGE_MIGRATION_CHECKLIST.md  STRUCTURE_UPDATE.md  TEAM_UPDATE_NODE20.md  TELEGRAM_MINI_APP_MAGIC_PATTERNS_PROMPT.md  VECTOR_UPDATE_TODO.md  graph-memory-implementation-summary.md  graph-memory-setup.md  mem0-advanced-configuration.md  mem0-env-configuration.md  mem0-features-summary.md  mem0-graph-setup.md  mem0-integration-design.md  prd.md  processor-implementation.md  smart-rails-architecture.md  smart-rails-developer-guide.md
notes/: index.md
scratch/: README.md
scripts/: README.md  ai_change_check.sh  check_namespace_api.py  cleanup-artifacts.sh  cleanup_duplicates.py  debug_joel_query.py  deploy_phase1.sh  fix-agents-frontmatter.sh  fix_imports.py  fix_type_hints.py  keep_alive.sh  load_test_small_team.py  local_dev.py  log_receiver.py  migrate_database.py  monitor_deployment.sh  preflight_check.sh  remove_field_reports.py  reorganize-stories.sh  reset_databases.py  reset_vector_10net.py  rollback_phase1.sh  run_load_test.sh  setup-neo4j.sh  setup_telegram_webhook.sh  start-production-fixed.sh  start-production.sh  test_10net_queries.py  test_ai_babysitter.sh  test_bot_pipeline.sh  test_namespace_issue.py  test_process_endpoint.py  test_update_method.py  test_webhook_message.py  update-devlog-enhanced.py  update-devlog.py  update-task.sh  update_imports.py  validate_config.py  view_test_history.sh
telegram-mini-app/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  TESTING.md  biome.json  deploy.sh  docker-compose.yml  netlify.toml  nginx.conf  package-lock.json  package-updated.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ci.ts  vitest.config.ts  wrangler.toml
temp_migration/: add_missing_accounts.sql  analysis_output.txt  analyze_customers.py  analyze_data.py  analyze_detailed.py  analyze_journal.py  analyze_vendors.py  batch_accounts_2.sql  batch_accounts_3.sql  batch_accounts_4.sql  batch_accounts_5.sql  batch_journal_1.sql  batch_journal_10.sql  batch_journal_11.sql  batch_journal_12.sql  batch_journal_13.sql  batch_journal_14.sql  batch_journal_2.sql  batch_journal_3.sql  batch_journal_4.sql  batch_journal_5.sql  (+64 more)
(+647 files in other folders)
